# ChangeLog for sys-fs/unionfs-fuse
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header $

  03 Jan 2011; Martin Väth <martin@mvath.de>
  Bump to EAPI=4.

  20 May 2010; Martin Väth <martin@mvath.de>
  Copy from the portage tree and make live version (until 0.25 is in tree).
  Clear previous ChangeLog.