@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/unionfs-fuse
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
+
+  03 Feb 2012; Martin Väth <martin@mvath.de>
+  Bump to unionfs-fuse-0.25. Rename and re-keyword live ebuild appropriately.
 
   03 Jan 2011; Martin Väth <martin@mvath.de>
   Bump to EAPI=4.
